# fit2

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain  serverless.yml
src/: adaptor.rs  auth.rs  core.rs  error.rs  ext.rs  lib.rs  main.rs  route.rs  utils.rs
src/core/: fitbit.rs  google.rs
src/route/: templates.rs
templates/: setup.jinja.html
