[package]
name = "fit2"
version = "0.1.0"
edition = "2018"

authors = ["Aetf <aetf@unlimited-code.works>"]
homepage = "https://github.com/Aetf/fit2"
repository = "https://github.com/Aetf/fit2"
license = "MIT OR Apache-2.0"

default-run = "local"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
routerify = { git = "https://github.com/Aetf/routerify", branch="master" }
futures = "0.3"
hyper = "0.13"
anyhow = "1.0"
thiserror = "1.0"
simple_logger = "1.11"
log = "0.4"

lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = { version = "1.0" }

rusoto_core = {version = "0.45.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "0.45.0", default_features = false, features=["rustls"]}
envy = "0.4"
serde = "1.0"
dynomite = { version = "0.10", default_features = false, features=["rustls", "derive"]}

[dependencies.lambda]
git = "https://github.com/awslabs/aws-lambda-rust-runtime/"
branch = "master"
default-features = false
